@@ -31,7 +31,7 @@
   d1b4081a78ca60cac8c67fa84a6fb6b697075309 2012111500 mingw32-binutils.xml
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
-  def4cf3df5f61690f8bfc409727e80480336bcfa 2012090900 mingw32-dos2unix.xml
+  c320ae7f1db93419e4a9b9ad098f69bb6655af08 2013012700 mingw32-dos2unix.xml
   a95192db0a6f7de983c642096ce2a335dcad8393 2012073100 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
