@@ -41,7 +41,7 @@
   000b65b5e1d1c9a0bf3fcb08e08d73cd952f3963 2012073100 msys-dash.xml
   dcce1ddf19a9c305adb350e958de55676cf69112 2012073100 msys-diffstat.xml
   5cc54287970aca239fc154e9b46c988ef57b5c9a 2012073100 msys-diffutils.xml
-  159b80a274cfd8cca4f2e3fac0c3ab562592de79 2012090900 msys-dos2unix.xml
+  e44bbdfa99fda09ffc29d5eba29987690be8a19a 2013012700 msys-dos2unix.xml
   2654c6f215facbc7aa9a7391a76e9f626ee2188c 2012073100 msys-expat.xml
   2a9bc928f054128d683e2f07e11aa5c73271eb82 2012073100 msys-file.xml
   43501d0b51f801f6ee2b124c361b20223fcfeff2 2012073100 msys-findutils.xml
