@@ -1,3 +1,10 @@
+2013-01-27  Erwin Waterlander  <waterlan@xs4all.nl>
+
+	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.3.
+	* mingw32/issue.log: Updated accordingly.
+	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.3.
+	* msys/issue.log: Updated accordingly.
+
 2012-11-22  Cesar Strauss  <cestrauss@gmail.com>
 
 	Update & publish msys-core.
